# USBCoercer

./: CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  dhserver.c  dhserver.h  idf_component.yml  main.c  usbc_config.c  usbc_config.h  wpad_http_server.c  wpad_http_server.h
